--- a/css/styles.css
+++ b/css/styles.css
@@ -54,16 +54,20 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
-  background-color: #252831;
+  /* height: 80px; */
+  /* background-color: #252831; */
   text-align:center;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
-nav h1 {
+.inside header nav,nav h1 {
   margin: auto;
+  font-family: 'Monoton', cursive;
 }
 nav h1 a {
-  color: #fff;
-  font-size: 45pt;
+  color: black;
+  font-size: 70pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
