--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,7 +1,63 @@
-.app-header{
-    height: 12vh;
+:root{
+    --font-color:black;
+    --hf-background:black;
+    --hf-font-color:white;
 }
 
-a#app-title{
-    font-size: 4em;
+html{
+    height: 100%;
+    width: 100%;
+    font-family: "Helvetica","Arial",sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+body{
+    margin:0px;
+}
+
+body main{
+    /* margin:0 8px; */
+    position: fixed;
+    top:8vh;
+    height: 86vh;
+    width: 100%;
+}
+.header{
+    position: fixed;
+    top:0;
+    height: 8vh;
+    width: 100%;
+    background-color: var(--hf-background);
+    color: var(--hf-font-color);
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Monoton', cursive;
+}
+
+.header a {
+    text-decoration: none;
+    color:var(--hf-font-color);
+    text-transform: uppercase;
+    font-size: 2em;
+    letter-spacing: 0.5em;
+}
+
+
+footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    height: 6vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--hf-background);
+    color:var(--font-color);
 }
