--- a/css/main-content.css
+++ b/css/main-content.css
@@ -15,19 +15,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 10vh;
     /* background: #2D2E33; */
     /* padding: 0.5em 0;     */
+}
+
+.filter-options h2{
+    color: #111111;
+    /* font-size: 16px; */
+    font-family: Roboto, Arial, sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    /* line-height: 20px; */
 }
 
 .filter-options select{
     /* display: inline; */
     /* border-radius: 0.5em; */
-    font-size: 2em;
-    /* height:  */
+    /* font-size: 2em; */
+    height: 6vh;
 }
 
 .filter-options * {
-    margin:0 2em;
+    margin:0 1em;
+}
+
+.filter-btn{
+    height: 6vh;
+    width: 16vw;
+    color: white;
+    background: black;
+    font-family: Roboto, Arial, sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 #restaurants-list{
@@ -40,8 +60,8 @@
     display: inline-block;
     background: #fff;
     border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
+    /* transition: all 0.3s cubic-bezier(.25,.8,.25,1); */
     cursor: pointer;
 }
 
@@ -53,14 +73,24 @@
     margin:0;
     text-align: center;
     padding:2px;
-    background-color: #e6e6e6;
+    /* background-color: #e6e6e6; */
     /* border-bottom: 1px solid #e6e6e6; */
+    font-size: 13px;
+    font-family: Roboto, Arial, sans-serif;
+    font-weight: 400;
+    line-height: 18px;
+    color:rgba(17, 17, 17, 0.8);
 }
 
 #restaurants-list li h1 {
     margin:0;  
     text-align: center;
     padding:2px;
-    background-color: #e6e6e6;
+    /* background-color: #e6e6e6; */
     /* border-bottom: 1px solid #e6e6e6; */
+    color: #111111;
+    /* font-size: 16px; */
+    font-family: Roboto, Arial, sans-serif;
+    font-weight: 500;
+    line-height: 20px;
 }
