--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -7,8 +7,8 @@
 html{
     height: 100%;
     width: 100%;
-    font-family: "Helvetica","Arial",sans-serif;
-    font-size: 14px;
+    font-family: "Times New Roman","Helvetica","Arial","sans-serif";
+    font-size: 16px;
     font-weight: 400;
     line-height: 20px;
 }
