responsive design added,tablet devices needs to be done

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,33 @@
     font-size: 1em;
 }
 
+#map{
+    height: 25vh;
+}
+
+.filter-options{
+    display: block;
+}
+
+.filter-options h2{
+    width: 100%;
+    margin: 0.5em 0;
+    display: block;
+}
+
+.filter-options select{
+    width:33%;
+}
+
+.filter-options .filter-btn{
+    width: 30%;
+    border-style: initial;
+}
+
+.filter-options *{
+    margin: 0;
+}
+
 #restaurants-list{
     justify-content: center;
 }
@@ -17,30 +44,39 @@
 /* restaurant info  */
 #restaurant-container, #reviews-container{
     display: block;
-    margin: 0 2vw;
+    margin: 1em;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .restaurant-info{
     /* background: antiquewhite; */
     border-radius: 2%;
+    padding: 0.5em;
+}
+
+#restaurant-name{
+    margin: 0;  
 }
 
 #restaurant-img{
     display: block;
-    width: 85%;
+    width: 85vw;
+    height: 25vh;
     margin: 0 auto;
 }
 .restaurant-tab{
+    height: 25vh;
     display: block;
     width:100%;
-    margin: 1em 0;
+    padding: 2em 0;
 }
+
 #restaurant-hours{
     border-collapse: collapse;
     border: 1px solid;
     width:85%;
     text-align: center;
+    margin: 0 7%;
 }
 
 .table-head {
@@ -51,24 +87,29 @@
 
 #restaurant-cuisine, #restaurant-address{
     text-align: center;
+    margin: 0;
 }
 
 #reviews-container{
-
+    position: absolute;
 }
+#reviews-container h2{
+    margin: 0;
+}
+
 #reviews-list{
     list-style: none;
     padding: 0 1em;
 }
 
 #reviews-list li{
-    margin: 2em 0;
+    margin:0 0 2em 0;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .review{
-    background: black;
+    background:#546E7A;
     color:white;
 }
 
@@ -89,6 +130,6 @@
 
 .review-comments{
     margin: 0;
-    padding:0.2em;
+    padding:0.4em;
 }
 
