--- a/css/main-content.css
+++ b/css/main-content.css
@@ -49,6 +49,7 @@
     font-family: Roboto, Arial, sans-serif;
     font-weight: 500;
     text-transform: uppercase;
+    border-style: initial;
 }
 
 #restaurants-list{
