--- a/css/mobile.css
+++ b/css/mobile.css
@@ -139,3 +139,18 @@
     padding:0.4em;
 }
 
+#add-review{
+    width: 76vw;
+    height: 42vh;
+    padding: 0.5em 1em;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#rating{
+    border-width: 0;
+}
+
+button#add-review-btn{
+    width: 35%;
+}
