--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,5 @@
 .header, .footer{
-    border-radius:0.3em;
+    /* border-radius:0.3em; */
 }
 .header a {
     font-size: 1em;
@@ -62,6 +62,7 @@
 
 #restaurant-name{
     margin: 0;  
+    display: inline;
 }
 
 #restaurant-img{
@@ -141,7 +142,7 @@
 
 #add-review{
     width: 76vw;
-    height: 42vh;
+    height: 48vh;
     padding: 0.5em 1em;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -152,5 +153,20 @@
 }
 
 button#add-review-btn{
-    width: 35%;
+    width: 40vw;
+}
+
+.review-add-icon{
+    float: right;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin: 18px 10px;
+    border-radius: 50%;
+    content: "";
+}
+.review-add-icon i{
+    display: block;
+    margin: auto auto;
 }
